--- a/notebooks/2B_Exploratory_Data_Analysis_on_Google_Store_Sequence_Data.ipynb
+++ b/notebooks/2B_Exploratory_Data_Analysis_on_Google_Store_Sequence_Data.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1b6639f4",
+   "metadata": {},
+   "source": [
+    "# Exploratory Data Analysis on Google Merchandise Store Sequence Data\n",
+    "\n",
+    "Can you use python and data visualizaiton to answer these different start questions? Can you think of any other questions that might be intresting or relevant to explore before building a model?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "9c431f84",
@@ -10,14 +20,6 @@
     "import pandas as pd\n",
     "import numpy as np"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f607819",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
