did a bunch of stuff
...

--- a/notebooks/2B_Exploratory_Data_Analysis_on_Google_Store_Sequence_Data.ipynb
+++ b/notebooks/2B_Exploratory_Data_Analysis_on_Google_Store_Sequence_Data.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Exploratory Data Analysis on Google Merchandise Store Sequence Data\n",
     "\n",
-    "Can you use python and data visualizaiton to answer these different start questions? Can you think of any other questions that might be intresting or relevant to explore before building a model?"
+    "Can you use python and data visualization to answer these different start questions? Can you think of any other questions that might be intresting or relevant to explore before building a model?"
    ]
   },
   {
@@ -22,11 +22,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db13e160",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "009fa7ba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "119bb015",
    "metadata": {},
    "source": [
-    "**How big is the dataset?**"
+    "**How big is the dataset?** (row count, column count, data storage size)"
    ]
   },
   {
