--- a/notebooks/3B_Logistic_Bagging_on_Sequence_Position.ipynb
+++ b/notebooks/3B_Logistic_Bagging_on_Sequence_Position.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "37a7f35d",
+   "execution_count": 2,
+   "id": "7e415b52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,10 +14,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9275be7f",
+   "id": "46e2f4bd",
    "metadata": {},
    "source": [
-    "# Motivational Example A - Learning Optimal Position Using Logistic Bagging\n",
+    "# Motivational Example A - Learning Optimal Position Using Logistic & Logistic Bagging\n",
     "\n",
     "Sequencing data dimensionality can get huge fast. For example if we had 8 unique channels and wanted to study all the unique sequences of the last 10 touchpoints there could be up to 1,227,133,512 sequences to study. \n",
     "\n",
@@ -32,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "bdd12488",
+   "execution_count": 3,
+   "id": "5f5acdbf",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "9                   0.0  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,8 +187,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "c684c953",
+   "execution_count": 4,
+   "id": "9e46ec0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sequence_id</th>\n",
+       "      <th>fullVisitorId</th>\n",
+       "      <th>event_name</th>\n",
+       "      <th>event_datetime</th>\n",
+       "      <th>conversion_proximity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1541</th>\n",
+       "      <td>0OcTf9iis2bwtGH</td>\n",
+       "      <td>6708661699896063078</td>\n",
+       "      <td>referral</td>\n",
+       "      <td>2017-08-04 17:08:02</td>\n",
+       "      <td>5273906.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1542</th>\n",
+       "      <td>0OcTf9iis2bwtGH</td>\n",
+       "      <td>6708661699896063078</td>\n",
+       "      <td>organic_search</td>\n",
+       "      <td>2017-08-04 17:10:37</td>\n",
+       "      <td>5273751.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1543</th>\n",
+       "      <td>0OcTf9iis2bwtGH</td>\n",
+       "      <td>6708661699896063078</td>\n",
+       "      <td>referral</td>\n",
+       "      <td>2017-09-06 02:47:03</td>\n",
+       "      <td>2474365.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1544</th>\n",
+       "      <td>0OcTf9iis2bwtGH</td>\n",
+       "      <td>6708661699896063078</td>\n",
+       "      <td>organic_search</td>\n",
+       "      <td>2017-09-06 02:59:49</td>\n",
+       "      <td>2473599.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1545</th>\n",
+       "      <td>0OcTf9iis2bwtGH</td>\n",
+       "      <td>6708661699896063078</td>\n",
+       "      <td>referral</td>\n",
+       "      <td>2017-09-15 17:15:52</td>\n",
+       "      <td>1644636.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1546</th>\n",
+       "      <td>0OcTf9iis2bwtGH</td>\n",
+       "      <td>6708661699896063078</td>\n",
+       "      <td>referral</td>\n",
+       "      <td>2017-10-04 17:47:16</td>\n",
+       "      <td>1152.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1547</th>\n",
+       "      <td>0OcTf9iis2bwtGH</td>\n",
+       "      <td>6708661699896063078</td>\n",
+       "      <td>conversion</td>\n",
+       "      <td>2017-10-04 18:06:28</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          sequence_id        fullVisitorId      event_name  \\\n",
+       "1541  0OcTf9iis2bwtGH  6708661699896063078        referral   \n",
+       "1542  0OcTf9iis2bwtGH  6708661699896063078  organic_search   \n",
+       "1543  0OcTf9iis2bwtGH  6708661699896063078        referral   \n",
+       "1544  0OcTf9iis2bwtGH  6708661699896063078  organic_search   \n",
+       "1545  0OcTf9iis2bwtGH  6708661699896063078        referral   \n",
+       "1546  0OcTf9iis2bwtGH  6708661699896063078        referral   \n",
+       "1547  0OcTf9iis2bwtGH  6708661699896063078      conversion   \n",
+       "\n",
+       "           event_datetime  conversion_proximity  \n",
+       "1541  2017-08-04 17:08:02             5273906.0  \n",
+       "1542  2017-08-04 17:10:37             5273751.0  \n",
+       "1543  2017-09-06 02:47:03             2474365.0  \n",
+       "1544  2017-09-06 02:59:49             2473599.0  \n",
+       "1545  2017-09-15 17:15:52             1644636.0  \n",
+       "1546  2017-10-04 17:47:16                1152.0  \n",
+       "1547  2017-10-04 18:06:28                   0.0  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sequence_df[sequence_df['sequence_id']=='0OcTf9iis2bwtGH']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "bd9367ea",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd399fd2",
+   "id": "244ef5d8",
    "metadata": {},
    "source": [
     "## Make a position based dataset to model on\n",
@@ -238,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "589060a5",
+   "id": "ca6ba86b",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54116244",
+   "id": "64e79b33",
    "metadata": {},
    "outputs": [],
    "source": []
