remove EDA solutions

--- a/notebooks/2B_Exploratory_Data_Analysis_on_Google_Store_Sequence_Data.ipynb
+++ b/notebooks/2B_Exploratory_Data_Analysis_on_Google_Store_Sequence_Data.ipynb
@@ -12,13 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9c431f84",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -27,7 +28,9 @@
    "id": "db13e160",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv('../datasets/sequence_fact.csv')"
+   ]
   },
   {
    "cell_type": "code",
@@ -48,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff2dafbc",
+   "id": "fe636215",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -151,54 +154,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6906658",
-   "metadata": {},
-   "source": [
-    "**for each channel how many sequences do they belong to**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e1f15093",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e813c465",
-   "metadata": {},
-   "source": [
-    "**for each channel how many sequences do they belong to**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "75caee22",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e176f7c0",
-   "metadata": {},
-   "source": [
-    "**for each channel how many sequences do they belong to**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "502acf3c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "5a90098c",
    "metadata": {},
    "source": [
@@ -225,6 +180,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "43ca7014",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aeefd89f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -262,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "0.0.0"
   }
  },
  "nbformat": 4,
