--- a/notebooks/3_Logistic_MTA_No_Sequence.ipynb
+++ b/notebooks/3_Logistic_MTA_No_Sequence.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "id": "7e415b52",
    "metadata": {},
    "outputs": [],
@@ -655,6 +655,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "fa04fdd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vis_detail = pd.read_csv('../datasets/visitor_detail.csv')\n",
+    "# vis_detail.head(10)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "812c479c",
    "metadata": {},
@@ -772,9 +783,9 @@
          "type": "scatter",
          "x": [
           0,
-          1.694742907500932e-05,
-          5.084228722502796e-05,
-          6.778971630003728e-05,
+          0.00001694742907500932,
+          0.00005084228722502796,
+          0.00006778971630003728,
           0.00010168457445005592,
           0.00013557943260007456,
           0.00016947429075009322,
@@ -1205,7 +1216,7 @@
          "type": "scatter",
          "x": [
           0,
-          5.076657528683115e-05,
+          0.00005076657528683115,
           0.0003045994517209869,
           0.0003045994517209869,
           0.0005584323281551427,
@@ -2660,7 +2671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
